# license-header-check

./: .pre-commit-hooks.yaml  README.md  check.py  pyproject.toml
